Auto Test Controller Test
Добавление зависимостей на авто тесты
Добавление тестов на Controller